--- a/clash/views/building.xml
+++ b/clash/views/building.xml
@@ -1,6 +1,5 @@
 <odoo>
     <data>
-        <!-- Vista de árbol -->
         <record id="view_building_tree" model="ir.ui.view">
             <field name="name">clash.building.tree</field>
             <field name="model">clash.building</field>
@@ -14,12 +13,12 @@
                     <field name="troops_max"/>
                     <field name="health"/>
                     <field name="village_id"/>
+                    <field name="total_production_cost"/>
                     <field name="level"/>
                 </tree>
             </field>
         </record>
 
-        <!-- Vista de formulario -->
         <record id="view_building_form" model="ir.ui.view">
             <field name="name">clash.building.form</field>
             <field name="model">clash.building</field>
@@ -36,13 +35,30 @@
                             <field name="current_troops"/>
                             <field name="health"/>
                             <field name="village_id"/>
+                            <field name="total_production_cost" attrs="{'invisible':[('type', '!=', '4')]}"/>
                             <field name="level"/>
                             <field name="troops" attrs="{'invisible':[('type', '!=', '4')]}" />
+                            <field name="resource" attrs="{'invisible':[('type', '==', '4')]}"/>
                         </group>
                     </sheet>
                 </form>
             </field>
         </record>
+
+        <record id="view_clash_building_search" model="ir.ui.view">
+    <field name="name">clash.building.search</field>
+    <field name="model">clash.building</field>
+    <field name="arch" type="xml">
+        <search>
+            <field name="name" string="Building Name"/>
+            <field name="type" string="Building Type"/>
+            <field name="level" string="Building Level"/>
+            <group string="Group By">
+                <filter name="group_by_Type" string="Group by Type" context="{'group_by': 'type'}"/>
+            </group>
+        </search>
+    </field>
+</record>
 
     </data>
 </odoo>
