--- a/clash/views/defense.xml
+++ b/clash/views/defense.xml
@@ -8,6 +8,8 @@
             <tree>
                 <field name="name"/>
                 <field name="type"/>
+                <field name="damage"/>
+                <field name="health"/>
                 <field name="village_id"/>
                 <field name="level"/>
             </tree>
@@ -23,6 +25,8 @@
                     <group>
                         <field name="name"/>
                         <field name="type"/>
+                        <field name="damage"/>
+                        <field name="health"/>
                         <field name="village_id"/>
                         <field name="level"/>
                     </group>
@@ -30,6 +34,18 @@
             </form>
         </field>
     </record>
+
+    <record id="view_clash_defense_search" model="ir.ui.view">
+    <field name="name">clash.defense.search</field>
+    <field name="model">clash.defense</field>
+    <field name="arch" type="xml">
+        <search>
+            <field name="name" string="Defense Name"/>
+            <field name="type" string="Defense Type"/>
+            <field name="level" string="Defense Level"/>
+        </search>
+    </field>
+</record>
 
 
     </data>
