--- a/clash/views/resource.xml
+++ b/clash/views/resource.xml
@@ -9,6 +9,7 @@
                 <field name="name"/>
                 <field name="type"/>
                 <field name="village_id"/>
+                <field name="amount"/>
             </tree>
         </field>
     </record>
@@ -23,36 +24,28 @@
                         <field name="name"/>
                         <field name="type"/>
                         <field name="village_id"/>
+                        <field name="amount"/>
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
 
-    <record id="view_resource_kanban" model="ir.ui.view">
-        <field name="name">clash.resource.kanban</field>
-        <field name="model">clash.resource</field>
-        <field name="arch" type="xml">
-            <kanban>
-                <field name="name">Nombre</field>
-                <field name="type">Tipo</field>
-                <templates>
-                    <t t-name="kanban-box">
-                        <div class="oe_kanban_content">
-                            <div class="oe_kanban_header">
-                                <field name="name"/>
-                            </div>
-                            <div class="oe_kanban_details">
-                                <field name="type"/>
-                            </div>
-                        </div>
-                    </t>
-                </templates>
-            </kanban>
-        </field>
-    </record>
+    <record id="view_clash_resource_search" model="ir.ui.view">
+    <field name="name">clash.resource.search</field>
+    <field name="model">clash.resource</field>
+    <field name="arch" type="xml">
+        <search>
+            <field name="name" string="Resource Name"/>
+            <field name="type" string="Resource Type"/>
+            <filter name="gold" string="gold" domain="[('type','=',1)]"/>
+            <filter name="mana" string="mana" domain="[('type','=',2)]"/> 
+            <filter name="gems" string="gems" domain="[('type','=',3)]"/> 
 
 
+        </search>
+    </field>
+</record>
 
 
     </data>
