--- a/clash/views/building.xml
+++ b/clash/views/building.xml
@@ -4,7 +4,7 @@
             <field name="name">clash.building.tree</field>
             <field name="model">clash.building</field>
             <field name="arch" type="xml">
-                <tree decoration-info="state=='name'" decoration-danger="state=='health'">
+                <tree>
                     <field name="name"/>
                     <field name="type"/>
                     <field name="gold_production"/>
@@ -25,12 +25,33 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                    <kanban>
+                        <templates>
+                            <t t-name="kanban-box">
+                                <div class="oe_kanban_content">
+                                    <div class="oe_kanban_header">
+                                        <field name="name"/>
+                                        <field name="type"/>
+                                    </div>
+                                    <div class="oe_kanban_details">
+                                        <div class="oe_kanban_detail">
+                                            <span>Gold Production: </span>
+                                            <field name="gold_production"/>
+                                        </div>
+                                        <div class="oe_kanban_detail">
+                                            <span>Mana Production: </span>
+                                            <field name="mana_production"/>
+                                        </div>
+                                        <div class="oe_kanban_detail">
+                                            <span>Gems Production: </span>
+                                            <field name="gems_production"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </t>
+                        </templates>
+                    </kanban>
                         <group>
-                            <field name="name"/>
-                            <field name="type"/>
-                            <field name="gold_production"/>
-                            <field name="mana_production"/>
-                            <field name="gems_production"/>
                             <field name="troops_max"/>
                             <field name="current_troops"/>
                             <field name="health"/>
@@ -40,6 +61,7 @@
                             <field name="troops" attrs="{'invisible':[('type', '!=', '4')]}" />
                             <field name="resource" attrs="{'invisible':[('type', '==', '4')]}"/>
                         </group>
+                        
                     </sheet>
                 </form>
             </field>
