--- a/clash/views/battle.xml
+++ b/clash/views/battle.xml
@@ -18,7 +18,6 @@
         </field>
     </record>
 
-    <!-- Vista Formulario -->
     <record id="view_battle_form" model="ir.ui.view">
         <field name="name">clash.battle.form</field>
         <field name="model">clash.battle</field>
@@ -35,7 +34,7 @@
                         <field name="start_date"/>
                         <field name="end_date"/>
                         <field name="progress"/>
-                        <field name="battle_finished" widget="progressbar"/>
+                        <field name="battle_finished"/>
                     </group>
                 </group>
             </form>
