--- a/clash/views/views.xml
+++ b/clash/views/views.xml
@@ -19,8 +19,14 @@
 
     <record model="ir.actions.act_window" id="clash.action_player">
       <field name="name">clash player</field>
-      <field name="res_model">clash.player</field>
+      <field name="res_model">res.partner</field>
       <field name="view_mode">tree,form,kanban</field>
+      <field name="domain"></field>
+      <field name="context">{'default_is_player': True, 'search_default_is_player_filter': 1}</field>
+      <field name="search_view_id" ref="view_clash_player_search"/>
+      <field name="view_ids" eval="[(5, 0, 0),
+      (0, 0, {'view_mode': 'tree', 'view_id': ref('view_player_tree')}),
+      (0, 0, {'view_mode': 'form', 'view_id': ref('view_player_form')}),]" />
     </record>
 
     <record model="ir.actions.act_window" id="clash.action_village">
